[package]
name = "triangular_arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[[bin]]
name = "triangular_arbitrage"
path = "./src/main.rs"
